--- a/metal gear.css
+++ b/metal gear.css
@@ -1,7 +1,46 @@
-.metal gear{
-    width : 100%;
-    height :100%;
-overflow: hidden;
+.metal gear {
+    width: 100%;
+    min-height: 100vh;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+/* 确保大屏幕上导航保持水平排列 */
+@media screen and (min-width: 1201px) {
+    .leader-wrap {
+        width: 1200px;
+        min-width: 1200px;
+        height: 70px;
+        background-color: black;
+        margin: 0 auto;
+        position: relative;
+        overflow: visible; /* 改为visible，使下拉菜单可见 */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .leader-wrap ul {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+    }
+    
+    .leader-wrap li {
+        float: left;
+        list-style-type: none;
+        margin: 0;
+        padding: 0 15px;
+        line-height: 70px;
+        width: auto;
+        font-size: 14px;
+        color: aliceblue;
+        text-align: center;
+        white-space: nowrap;
+        position: relative; /* 添加相对定位，使下拉菜单相对于此元素定位 */
+        cursor: pointer; /* 添加指针样式，提示用户可以点击 */
+    }
 }
 .header{
     position: relative;
@@ -33,13 +72,15 @@ overflow: hidden;
     background-color:rgb(7, 7, 7);
 }
 .leader-wrap{
-    width:1200px ;
+    width:1200px;
+    min-width: 1200px; /* 确保最小宽度，防止换行 */
     height:70px;
     background-color:black;
     margin: 0 auto;
     position: relative;
+    overflow: visible; /* 改为visible，使下拉菜单可见 */
 }
-.leader-wrap li{
+.leader-wrap .nav-item{
     float: left;
     list-style-type: none;
     margin: 0;
@@ -47,7 +88,9 @@ overflow: hidden;
     line-height: 70px;
     width: 150px;
     font-size: 14px;
-    color:aliceblue
+    color:aliceblue;
+    position: relative; /* 添加相对定位，使下拉菜单相对于此元素定位 */
+    cursor: pointer; /* 添加指针样式，提示用户可以点击 */
 }
 .leader-wrap ul{
     margin: 0;
@@ -70,13 +113,20 @@ overflow: hidden;
      height:300px;
      background-color: rgb(9, 9, 9);
      position: absolute;
-     left: 180px;
+     top: 70px; /* 设置top值，使其显示在导航项下方 */
+     left: 0; /* 修改left值，使其相对于父元素定位 */
      display:none;
      color:rgb(250, 250, 250);
      line-height:1.7;
+     z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list{
-    display:block
+.leader-wrap .nav-item:hover>.leader-list,
+.leader-wrap .nav-item:hover>.leader-list1,
+.leader-wrap .nav-item:hover>.leader-list3,
+.leader-wrap .nav-item:hover>.leader-list4,
+.leader-wrap .nav-item:hover>.leader-list5,
+.leader-wrap .nav-item:hover>.leader-list6 {
+    display:block;
 }
 .leader-list1{
     width:200px;
@@ -84,69 +134,223 @@ overflow: hidden;
     background-color: rgb(9, 9, 9);
     position: absolute;
     display: none;
-    left: -17px;
+    top: 70px; /* 设置top值，使其显示在导航项下方 */
+    left: 0; /* 修改left值，使其相对于父元素定位 */
     color:rgb(250, 250, 250);
     line-height:1.7;
+    z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list1{
-    display:block
-}
+/* 已合并到统一的悬停规则中 */
 .leader-list3{
     width:200px;
     height:300px;
     background-color: rgb(9, 9, 9);
     position: absolute;
     display: none;
-    left: 410px;
+    top: 70px; /* 设置top值，使其显示在导航项下方 */
+    left: 0; /* 修改left值，使其相对于父元素定位 */
     color:rgb(250, 250, 250);
     line-height:1.7;
+    z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list3{
-    display:block
-}
+/* 已合并到统一的悬停规则中 */
 .leader-list4{
     width:200px;
     height:300px;
     background-color: rgb(9, 9, 9);
     position: absolute;
     display: none;
-    left: 620px;
+    top: 70px; /* 设置top值，使其显示在导航项下方 */
+    left: 0; /* 修改left值，使其相对于父元素定位 */
     color:rgb(250, 250, 250);
     line-height:1.7;
+    z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list4{
-    display:block
-}
+/* 已合并到统一的悬停规则中 */
 .leader-list5{
     width:200px;
     height:300px;
     background-color: rgb(9, 9, 9);
     position: absolute;
     display: none;
-    left: 800px;
+    top: 70px; /* 设置top值，使其显示在导航项下方 */
+    left: 0; /* 修改left值，使其相对于父元素定位 */
     color:rgb(250, 250, 250);
     line-height:1.7;
+    z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list5{
-    display:block
-}
+/* 已合并到统一的悬停规则中 */
 .leader-list6{
     width:200px;
     height:300px;
     background-color: rgb(9, 9, 9);
     position: absolute;
     display: none;
-    left: 980px;
+    top: 70px; /* 设置top值，使其显示在导航项下方 */
+    left: 0; /* 修改left值，使其相对于父元素定位 */
     color:rgb(250, 250, 250);
     line-height:1.7;
+    z-index: 1000; /* 提高z-index值，确保显示在最上层 */
 }
-.leader-wrap li:hover>.leader-list6{
-    display:block
+/* 已合并到统一的悬停规则中 */
+
+/* 新的下拉菜单样式 */
+.nav-item {
+    position: relative;
 }
+
+.nav-title {
+    display: block;
+    padding: 0 15px;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200px;
+    height: auto; /* 高度根据内容自动调整 */
+    background-color: rgb(9, 9, 9);
+    color: rgb(250, 250, 250);
+    line-height: 1.7;
+    padding: 15px;
+    box-sizing: border-box;
+    display: none;
+    z-index: 1000;
+    white-space: nowrap; /* 默认情况下不换行，保持在一行 */
+}
+
+/* 当内容宽度超过容器宽度时，允许扩展容器宽度 */
+.dropdown-content:hover {
+    width: auto;
+    min-width: 200px; /* 保持最小宽度 */
+    max-width: 500px; /* 设置最大宽度，防止过宽 */
+}
+
+.dropdown-content p {
+    margin: 0;
+    white-space: normal; /* 允许文字正常换行 */
+    width: 100%; /* 确保段落宽度填满容器 */
+}
+
+.nav-item:hover .dropdown-content {
+    display: block;
+}
+
+/* 语义化标签样式 */
+header, nav, footer {
+    width: 100%;
+}
+
+footer {
+    margin-top: auto;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200px;
+    background-color: rgb(9, 9, 9);
+    color: rgb(250, 250, 250);
+    line-height: 1.7;
+    padding: 15px;
+    box-sizing: border-box;
+    display: none;
+    z-index: 1000;
+}
+
+.nav-item:hover .dropdown-menu {
+    display: block;
+}
+
+/* 将现有的leader-list类应用新的下拉菜单样式 */
+.leader-list,
+.leader-list1,
+.leader-list3,
+.leader-list4,
+.leader-list5,
+.leader-list6 {
+    position: absolute;
+    top: 100%; /* 设置为父元素的100%高度 */
+    left: 0;
+    width: 200px;
+    height: auto; /* 高度根据内容自动调整 */
+    background-color: rgb(9, 9, 9);
+    color: rgb(250, 250, 250);
+    line-height: 1.7;
+    padding: 15px;
+    box-sizing: border-box;
+    display: none;
+    z-index: 1000;
+    white-space: nowrap; /* 默认情况下不换行，保持在一行 */
+}
+
+/* 当内容宽度超过容器宽度时，允许扩展容器宽度 */
+.leader-list:hover,
+.leader-list1:hover,
+.leader-list3:hover,
+.leader-list4:hover,
+.leader-list5:hover,
+.leader-list6:hover {
+    width: auto;
+    min-width: 200px; /* 保持最小宽度 */
+    max-width: 500px; /* 设置最大宽度，防止过宽 */
+}
+
+.leader-list p,
+.leader-list1 p,
+.leader-list3 p,
+.leader-list4 p,
+.leader-list5 p,
+.leader-list6 p {
+    margin: 0;
+    white-space: normal; /* 允许文字正常换行 */
+    width: 100%; /* 确保段落宽度填满容器 */
+}
+
 .banner-box{
     width: 100%;
     height: 1057px;
-    margin-left: -200px;
+    margin-left: 0;
+    background-color: #000;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* Logo居中显示 */
+.kojima {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none; /* 移除链接下划线 */
+}
+
+.kojima img {
+    max-height: 100px;
+    width: auto;
+    border: none; /* 移除图片边框 */
+}
+
+/* 覆盖原始kojima样式，确保居中显示 */
+.header .kojima {
+    margin-left: 0 !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
 }
 body{
     margin: 0px;
@@ -163,4 +367,261 @@ body{
 .footer-text{
     font-size:medium;
     line-height:0.9em;
+}
+
+/* 响应式布局样式 */
+@media screen and (max-width: 1200px) {
+    .leader-list6 {
+        left: 850px;
+    }
+    
+    .leader-list5 {
+        left: 680px;
+    }
+    
+    .leader-list4 {
+        left: 500px;
+    }
+    
+    .leader-list3 {
+        left: 320px;
+    }
+    
+    .leader-list {
+        left: 150px;
+    }
+    
+    .leader-wrap {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    /* 当屏幕宽度小于1200px时，立即切换到垂直布局 */
+    .leader-wrap {
+        width: 100%;
+        min-width: auto;
+        height: auto;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+    
+    .leader-wrap .nav-item {
+        float: none;
+        width: 100%;
+        font-size: 16px;
+        padding: 15px 10px;
+        line-height: 1.5;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        position: relative; /* 确保相对定位 */
+    }
+    
+    /* 移动设备上下拉菜单样式 */
+    .leader-list,
+    .leader-list1,
+    .leader-list3,
+    .leader-list4,
+    .leader-list5,
+    .leader-list6 {
+        position: static; /* 在移动设备上使用静态定位 */
+        width: 100%;
+        margin-top: 10px;
+        padding: 10px;
+        display: none; /* 默认隐藏 */
+    }
+    
+    .leader-wrap .nav-item:hover .leader-list,
+    .leader-wrap .nav-item:hover .leader-list1,
+    .leader-wrap .nav-item:hover .leader-list3,
+    .leader-wrap .nav-item:hover .leader-list4,
+    .leader-wrap .nav-item:hover .leader-list5,
+    .leader-wrap .nav-item:hover .leader-list6 {
+        display: block; /* 悬停时显示 */
+    }
+    
+    .leader {
+        height: auto;
+    }
+    
+    .leader-list, .leader-list1, .leader-list3, .leader-list4, .leader-list5, .leader-list6 {
+        width: 100%;
+        left: 0 !important;
+        position: relative;
+        margin-top: 10px;
+        max-height: none;
+        height: auto;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .leader-list6 {
+        left: 700px;
+    }
+    
+    .leader-list5 {
+        left: 550px;
+    }
+    
+    .leader-list4 {
+        left: 400px;
+    }
+    
+    .leader-list3 {
+        left: 250px;
+    }
+    
+    .leader-list {
+        left: 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .leader-list, .leader-list1, .leader-list3, .leader-list4, .leader-list5, .leader-list6 {
+        width: 100%;
+        left: 0 !important;
+        position: relative;
+        margin-top: 10px;
+        max-height: none;
+        height: auto;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+
+    .banner-box {
+        width: 100%;
+        height: 60vh;
+        min-height: 400px;
+        margin-left: 0;
+        background-color: #000;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .banner-box img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .kojima {
+        position: relative;
+        margin-left: 0;
+        text-align: center;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .kojima img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .dd {
+        display: none;
+    }
+    
+    .leader {
+        height: auto;
+    }
+    
+    .leader-wrap {
+        width: 100%;
+        height: auto;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+    
+    .leader-wrap .nav-item {
+        float: none;
+        width: 100%;
+        font-size: 16px;
+        padding: 15px;
+        line-height: 1.5;
+    }
+    
+    .banner {
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        height: auto;
+        padding: 10px;
+    }
+
+    .footer {
+        height: auto;
+        padding: 20px;
+    }
+
+    .footer-text {
+        font-size: small;
+    }
+    
+    .leader-wrap .nav-item {
+        font-size: 14px;
+        padding: 10px;
+    }
+    
+    .leader-list, .leader-list1, .leader-list3, .leader-list4, .leader-list5, .leader-list6 {
+        padding: 10px;
+    }
+    
+    .leader-list p, .leader-list1 p, .leader-list3 p, .leader-list4 p, .leader-list5 p, .leader-list6 p {
+        font-size: 12px;
+    }
+    
+    .banner-box {
+        height: 50vh;
+        min-height: 300px;
+    }
+}
+
+/* 修复移动设备上的空白区域问题 */
+@media screen and (max-width: 480px) {
+    html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        min-height: 100vh;
+        overflow-x: hidden;
+    }
+    
+    .metal gear {
+        width: 100%;
+        min-height: 100vh;
+        overflow-x: hidden;
+    }
+    
+    .header {
+        width: 100%;
+    }
+
+    .footer {
+        width: 100%;
+    }
+    
+    .banner-box {
+        width: 100%;
+    }
+    
+    .banner {
+        width: 100%;
+    }
+    
+    .leader {
+        width: 100%;
+    }
+    
+    .leader-wrap {
+        width: 100%;
+    }
 }
